tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.out
/tmp/arbitrary-precision-integers-included-.st:7: parse error, expected ']'
