tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| b base e e1 e2 pow_big pow_int result s x |
pow_int := [:base :exp | result := 1.
b := base.
e := exp.
[(e > 0)] whileTrue: [
  (((e % 2) = 1)) ifTrue: [
    result := (result * b).
  ] .
  b := (b * b).
  e := (e / 2) asInteger.
]
.
result ].
pow_big := [:base :exp | result := 1.
b := base.
e := exp.
[(e > 0)] whileTrue: [
  (((e % 2) = 1)) ifTrue: [
    result := (result * b).
  ] .
  b := (b * b).
  e := (e / 2) asInteger.
]
.
result ].
e1 := pow_int value: 3 value: 2.
e2 := pow_int value: 4 value: e1.
base := 5.
x := pow_big value: base value: e2.
s := (x asString).
Transcript show: '5^(4^(3^2)) has'; show: ' '; show: ((s size)) printString; show: ' '; show: 'digits:'; show: ' '; show: ((s copyFrom: 0 to: 20)) printString; show: ' '; show: '...'; show: ' '; show: ((s copyFrom: ((s size) - 20) to: (s size))) printString; cr.
